2004-03-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

2004-03-02  David Bateman  <dbateman@free.fr>
 
	* oct-fftw.cc: Only two versions of plan, and avoid endless
	changes between them.  Faster for small fft's.
	(octave_fftw_planner::simd_align, octave_fftw_planner::rsimd_align):
	New member variables. 
	(octave_fftw_planner::ialign, octave_fftw_planner::oalign,
	octave_fftw_planner::rialign, octave_fftw_planner::roalign): Delete.
	Change all uses.
	(CHECK_SIMD_ALIGNMENT): New macro.
	(octave_fftw_planner::create_plan): Use it.

2004-03-01  Petter Risholm  <risholm@idi.ntnu.no>

	* Array.cc (Array<T>::insertN): Eliminate N-d indexing.

        * mx-inlines.cc (MX_ND_CAT): Delete macro.

        * dNDArray.h, chNDArray.h, CNDArray.h (cat): Change declaration.
        * dNDArray.cc (NDArray<T>::cat): Call new form of cat function.
        * chNDArray.cc (charNDArray<T>::cat): Ditto.
        * CNDArray.cc (ComplexNDArray<T>::cat): Ditto.

        * Array.h (cat_ra): Return int.  Accept idx and move args, not add_dim.
        * Array.cc (cat_ra): Speed up implementation by avoiding N-d indexing.

2004-02-24  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-rl-edit.c (octave_rl_set_startup_hook,
	octave_rl_get_startup_hook, octave_rl_set_event_hook,
	octave_rl_get_event_hook): Omit casts.
	* oct-rl-edit.h (rl_startup_hook_fcn_ptr, rl_event_hook_fcn_ptr):
	Return value for function pointer typedef is now int.
	* cmd-edit.h (command_editor::startup_hook_fcn,
	command_editor::event_hook_fcn): Likewise.
	* cmd-hist.cc, cmd-hist.h (command_history::goto_mark,
	command_history::do_goto_mark, gnu_history::do_goto_mark):
	Return type is now int.  Return 0.

	* EIG.cc (EIG::init, EIG::symmetric_init):
	Query Lapack for workspace size.

2004-02-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array.cc (Array<T>::resize_and_fill (const dim_vector&, const T&)): 
	Fix thinko in extending dimensions.

2004-02-20  John W. Eaton  <jwe@bevo.che.wisc.edu>
